--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     width: 100vw;
     height: 100vw;
 
-    background: url(./img/space.jpg) no-repeat;
+    background: url(https://cdn.pixabay.com/photo/2021/11/21/21/14/mountain-6815304_1280.jpg) no-repeat;
     background-position: center;
     background-size: cover;
     display: flex;
@@ -164,8 +164,7 @@ font-size: 1em;
   <input type="radio" id="lname" name="wich machin" value="ALL IN ONE">
   <label class="radiobutton"> ALL IN ONE </label><br>
 
-  <input type="radio" id="lname" name="wich machin" value="OTHER">
-  <label class="radiobutton">OTHER <br></label>
+
  <br>
 
     <label class="fname">What is the Problem</label>
